setup db connection

--- a/migrations/README
+++ b/migrations/README
@@ -1,5 +1,20 @@
 Generic single-database configuration for Flask-Migrate.
 
+To create a new migration:
+```
+flask db migrate -m "Description of changes"
+```
+
+To apply migrations:
+```
+flask db upgrade
+```
+
+To downgrade:
+```
+flask db downgrade
+```Generic single-database configuration for Flask-Migrate.
+
 To initialize the migrations directory:
 ```
 flask db init
